# copulalab

./: .gitignore  LICENSE.txt  NOTICE  README.md  __init__.py  base.py  copula_calculation.py  pairs_selection.py  pyproject.toml
archimedean/: __init__.py  clayton.py  frank.py  gumbel.py  joe.py  n13.py  n14.py
elliptical/: __init__.py  gaussian.py  student.py
mixed_copulas/: __init__.py  base.py  cfg_mix_copula.py  ctg_mix_copula.py
