[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copulalab"
version = "0.1.0"
description = "Minimal Copula Package for Research and Experimentation"
authors = [{ name = "Nguyen Hoang Nam", email = "nguyenhoangnam1192@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.23.5",
    "scipy>=1.10.1",
    "pandas>=2.0.0",
    "matplotlib>=3.7.1",
    "scikit-learn>=1.1.3",
    "statsmodels>=0.14.0",
    "pyvinecopulib>=0.6.5"
]
